--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   }, 1000);
 	  
     function myFunction() {
-      var app = "vnd.youtube://youtube.com/redirect?event=comments&redir_token=QUFFLUhqbDg5cWJTR3pocTFfRVNYUF9LS3loVVA2RjktUXxBQ3Jtc0trVXhSa3NhUmFsSV9ydUZnY0Y1UFFEbHg1MlB4V1ZWYXRBY0VIWmljQ2w0WU9aMm9aMHh5N1JiVzd5WGpjdmtZWWFEd0pOWEs0SmtQbGRBRzRQTHgwbnMtRFJKNEJYU0RQQ1ptbXdJbzQyYVJvMUdfWQ&q=https%3A%2F%2Fv.ht%2Fs4ztL&html_redirect=1";
+      var app = "vnd.youtube://youtube.com/redirect?event=comments&redir_token=QUFFLUhqa2syR01aQ0lRZEJTVmdPZVVpZklLZmVNTWFzd3xBQ3Jtc0tua1lvSHpXRGZ0eGZzcW41eTdZb1ZhTjFSZjcwU0hKRzVyU2FBTExBekE0Y09NOHdVTW9QSkk5ZzE2d0Rna2EwNWxNd2VCem5wYVowcEk5TXRaYlBidmpvVGpQMGFmNTV3ekpVVVlWU0JUR3Q5c1loYw&q=https%3A%2F%2Fv.ht%2FPIFDY&html_redirect=1";
 	
       if (/Android|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
         window.location.href = app;
